started work on project setup

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,7 +20,7 @@ ol[role=list] {
 
 html,
 body {
-  height: 100%;
+  height: 100% !important;
 }
 
 /* Set core root defaults */
@@ -41,7 +41,8 @@ a:not([class]) {
 
 /* Make images easier to work with */
 img,
-picture {
+picture,
+svg {
   max-width: 100%;
   display: block;
 }
@@ -67,6 +68,36 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+:root {
+  --clr-primary-100: #FF0000;
+  --clr-primary-200: #FF0202;
+  --clr-primary-400: #DC0B0B;
+  --clr-neutral-100: #ffffff;
+  --clr-neutral-200: #FBFBFB;
+  --clr-neutral-300: #F8F8F8;
+  --clr-neutral-900: ;
+  --ff-primary: "Roboto", sans-serif;
+  --ff-body: var(--ff-primary);
+  --ff-accent: var(--ff-primary);
+  --fw-regular: 400;
+  --fw-medium: 500;
+  --fw-bold: 700;
+  --fw-black: 900;
+  --fs-11: 0.6875rem;
+  --fs-12: 0.75rem;
+  --fs-13: 0.8125rem;
+  --fs-14: 0.875rem // 14px
+  --fs-15: 0.9375;
+  --fs-16: 1rem;
+  --fs-17: 1.0625rem;
+  --fs-20: 1.125rem;
+  --fs-24: 1.5rem;
+  --fs-28: 1.75rem;
+  --fs-32: 2rem;
+  --fs-36: 2.25rem;
+  --fs-42: 2.625rem;
+  --fs-62: 3.875rem;
 }
 
 /*# sourceMappingURL=main.css.map */
